--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "telebot-lib",
-  "version": "1.0.5",
+  "version": "1.0.8",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
